hdone/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Call_Recording__c</fullName>
        <description>Call Recording URL</description>
        <inlineHelpText>Call Recording URL</inlineHelpText>
        <label>Call Recording</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>ExternalId__c</fullName>
        <description>Formula to store part of external id, such as call id, for matching. Cannot use substrings in SOQL matching as of Spring &apos;14</description>
        <formula>Mid( Subject ,7,6)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Part of external id needed for SOQL matching</inlineHelpText>
        <label>ExternalId</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Number_Called__c</fullName>
        <description>Phone number called</description>
        <inlineHelpText>Phone number called</inlineHelpText>
        <label>Number Called</label>
        <type>Phone</type>
    </fields>
</CustomObject>